Update founder wording

--- a/keea/index.html
+++ b/keea/index.html
@@ -33,7 +33,7 @@
 
         <p class="company-description mb-5">Keea is a global healthcare platform where patients can book safe and reliable medical treatments abroad. We believe that healthcare is a human right and we want to create a world in which every patient has access to high-quality affordable care.</p>
         <p class="company-description mb-5">We are looking for more doctors to work together on integrating medical travel into the patient care pathway.</p>
-        <p class="help">We are running an early adopter program to gather feedback and design our service. Join the other 200+ doctors who have already signed up for our pilot.</p>
+        <p class="help">We are running an early adopter program to gather feedback and design our service. Join the other doctors who have already signed up for our pilot.</p>
         <a class="text-left typeform-share button" href="https://medicaltravel.typeform.com/to/TgiT7g" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#439cf1;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="5" target="_blank">Sign Up</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
     </div>
@@ -73,22 +73,14 @@
           <p>We are multicultural global citizens who came together because of a shared passion for making healthcare better for everyone.</p>
 
           <p>Alex is a Syrian-Ukrainian certified physician with specialization in International Health from Oxford University, who has done clinical training in 6 countries.</p>
-          <p>Sarah is a Singaporean-Japanese-American software engineer who has worked in the health insurance industry across two continents. She has also led the technical team for a global community platform.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Alexey1.jpg" alt="">
             <h6>Alex Youssef MD, Co-founder</h6>
             <p class="font-weight-light mb-0">Certified Physician, Rhodes Scholar (Syria & St Cross '18)</p>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/Sarah1.png" alt="">
-            <h6>Sarah Ing, Co-founder</h6>
-            <p class="font-weight-light mb-0">Software Engineer, Product Development</p>
           </div>
         </div>
       </div>
