--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Empowerment. <a href="https://skillshare.com">Building community with Skillshare.</a> <a href="https://sarahikeda.github.io/notanothersadlight">Creative tech</a>. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y"> Slam poetry.</a><a href="https://sarahikeda.github.io/strangers"> Strangers</a>.</p>
             <br>
 
-            <p><a href="https://en.wikipedia.org/wiki/Sentiment_analysis">Sentiment analysis.</a> How do we teach computers to understand us and essentially, be human?
+            <p>Sentiment analysis. How do we teach computers to understand us and essentially, *feel* human?
             </p>
             <br>
             <p>Potlucks. <a href="http://www.aquariumofpacific.org/images/olc/whale_shark2.jpg">Whale sharks</a> and <a href="https://www.dropbox.com/s/ymie3fzqgu0p8d6/484862_10100686720169268_418135144_n.jpg?dl=0">scuba diving. </a> <a href="https://medium.com/@Sarah_Ing/code-like-a-scuba-diver-a74dcb9df4">Coding and scuba diving.</a> Community. <a href="https://en.wikipedia.org/wiki/Tom_Swifty#Examples">Making people groan with bad jokes.</a>Bright wigs for Halloween.</p><br>
