--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="intro">Hi! I'm ceaselessly curious/nosy. When I moved from NY to Portland, OR at 13, I created a survey and handed it out to my new classmates so I could learn about them. I didn't become the most popular kid at school but I did know everyone's favorite color. [If we meet, expect lots of questions.]</p>
           <h3 class="fist-pump">These things makes me fist-pumpingly excited:</h3><br>
           <div class="activity-description">
-            <p>Empowerment. <a href="https://skillshare.com">Building community with Skillshare.</a> <a href="https://sarahikeda.github.io/notanothersadlight">Creative tech</a>. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y"> Slam poetry.</a><a href="https://sarahikeda.github.io/strangers"> Strangers</a>.</p>
+            <p>Empowerment. Building creative tools for music production at <a href="https://splice.com">Splice</a>. <a href="https://skillshare.com">Building community with Skillshare.</a> <a href="https://sarahikeda.github.io/notanothersadlight">Creative tech</a>. New experiences. <a href="https://www.instagram.com/p/BSheZSnh-zX/?taken-by=sarahikedas">Scary experiences.</a><a href="https://www.youtube.com/watch?v=gx91fd_7G4Y"> Slam poetry.</a><a href="https://sarahikeda.github.io/strangers"> Strangers</a>.</p>
             <br>
 
             <p>Sentiment analysis. How do we teach computers to understand us and essentially, *feel* human?
